udpated data-prep

--- a/Data-Prep-OIC.ipynb
+++ b/Data-Prep-OIC.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -13,46 +11,58 @@
     "import glob\n",
     "from tqdm import tqdm\n",
     "import numpy as np\n",
-    "import cv2 as cv\n",
-    "from get_image_size import get_image_size"
+    "import cv2 as cv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
+    "WORKING_DIR = '/home/paperspace/oic'\n",
     "DATA_PATH = '/home/paperspace/data/oic_2018'\n",
     "TEST_IMAGES_PATH = DATA_PATH + '/test'\n",
     "VALID_IMAGES_PATH = DATA_PATH + '/valid'\n",
+    "TRAIN_IMAGES_PATH = DATA_PATH + '/train_small'\n",
     "TEST_ANNO_PATH = DATA_PATH + '/test-annotations-bbox.csv'\n",
     "VALID_ANNO_PATH = DATA_PATH + '/valid-annotations-bbox.csv'\n",
+    "TRAIN_ANNO_PATH = DATA_PATH + '/train-annotations-bbox-500.csv'\n",
     "CLASS_INFO_CSV_MAP = DATA_PATH + '/challenge-2018-class-descriptions-500.csv'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(WORKING_DIR)\n",
+    "from utils import get_image_size as imtools\n",
+    "from sample_training import sample"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -108,7 +118,7 @@
        "/m/0120dh  Sea turtle    5"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,24 +134,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def format_csv(input_df, class_df, images_dir):\n",
+    "    image_shape_cache = pd.DataFrame(columns=['w','h'])\n",
+    "    output_df = input_df[['ImageID','LabelName','XMin','XMax','YMin','YMax']]\n",
+    "    output_df.columns = ['ImageID','class_label','xmin_p','xmax_p','ymin_p','ymax_p']\n",
+    "    output_df['image_name'] = output_df['ImageID'] + '.jpg'\n",
+    "    output_df  = output_df.drop(['ImageID'], axis=1)\n",
+    "    \n",
+    "    for fn in tqdm(set(output_df['image_name'])):\n",
+    "        (w, h) = imtools.get_image_size(images_dir + '/' + fn)\n",
+    "        image_shape_cache = image_shape_cache.append({'image_name': fn,\n",
+    "                                                      'w': w, \n",
+    "                                                      'h' : h}, ignore_index=True)\n",
+    "    image_shape_cache = image_shape_cache.set_index('image_name')\n",
+    "    output_df['w'] = output_df['image_name'].map(image_shape_cache['w'])\n",
+    "    output_df['h'] = output_df['image_name'].map(image_shape_cache['h'])\n",
+    "    output_df['xmin'] = (output_df['xmin_p'] * output_df['w']).astype('float').round().astype('int32')\n",
+    "    output_df['xmax'] = (output_df['xmax_p'] * output_df['w']).astype('float').round().astype('int32')\n",
+    "    output_df['ymin'] = (output_df['ymin_p'] * output_df['h']).astype('float').round().astype('int32')\n",
+    "    output_df['ymax'] = (output_df['ymax_p'] * output_df['h']).astype('float').round().astype('int32')\n",
+    "    \n",
+    "    output_df['class_id'] = output_df['class_label'].map(class_df['idx'])\n",
+    "\n",
+    "    print('input {} rows'.format(len(input_df)))\n",
+    "    output_df = output_df.dropna()\n",
+    "    print('formatted {} rows'.format(len(output_df)))\n",
+    "\n",
+    "    output_df['class_id'] = output_df['class_id'].astype('uint8')\n",
+    "    output_df = output_df[['image_name','class_id','xmin','xmax','ymin','ymax','class_label']]\n",
+    "    \n",
+    "    return output_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
        "    }\n",
        "\n",
        "    .dataframe tbody tr th {\n",
        "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
@@ -271,7 +319,7 @@
        "4         0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,46 +327,6 @@
    "source": [
     "valid_anno_df = pd.read_csv(VALID_ANNO_PATH)\n",
     "valid_anno_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def format_csv(input_df, class_df, images_dir):\n",
-    "    image_shape_cache = pd.DataFrame(columns=['w','h'])\n",
-    "    output_df = input_df[['ImageID','LabelName','XMin','XMax','YMin','YMax']]\n",
-    "    output_df.columns = ['ImageID','class_label','xmin_p','xmax_p','ymin_p','ymax_p']\n",
-    "    output_df['image_name'] = output_df['ImageID'] + '.jpg'\n",
-    "    output_df  = output_df.drop(['ImageID'], axis=1)\n",
-    "    \n",
-    "    for fn in tqdm(set(output_df['image_name'])):\n",
-    "        (w, h) = get_image_size(images_dir + '/' + fn)\n",
-    "        image_shape_cache = image_shape_cache.append({'image_name': fn,\n",
-    "                                                      'w': w, \n",
-    "                                                      'h' : h}, ignore_index=True)\n",
-    "    image_shape_cache = image_shape_cache.set_index('image_name')\n",
-    "    output_df['w'] = output_df['image_name'].map(image_shape_cache['w'])\n",
-    "    output_df['h'] = output_df['image_name'].map(image_shape_cache['h'])\n",
-    "    output_df['xmin'] = (output_df['xmin_p'] * output_df['w']).astype('float').round().astype('int32')\n",
-    "    output_df['xmax'] = (output_df['xmax_p'] * output_df['w']).astype('float').round().astype('int32')\n",
-    "    output_df['ymin'] = (output_df['ymin_p'] * output_df['h']).astype('float').round().astype('int32')\n",
-    "    output_df['ymax'] = (output_df['ymax_p'] * output_df['h']).astype('float').round().astype('int32')\n",
-    "    \n",
-    "    output_df['class_id'] = output_df['class_label'].map(class_df['idx'])\n",
-    "\n",
-    "    print('input {} rows'.format(len(input_df)))\n",
-    "    output_df = output_df.dropna()\n",
-    "    print('formatted {} rows'.format(len(output_df)))\n",
-    "\n",
-    "    output_df['class_id'] = output_df['class_id'].astype('uint8')\n",
-    "    output_df = output_df[['image_name','class_id','xmin','xmax','ymin','ymax','class_label']]\n",
-    "    \n",
-    "    return output_df"
    ]
   },
   {
@@ -880,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
